--- a/teacher.html
+++ b/teacher.html
@@ -11,7 +11,7 @@
         <div>
             <img class="img1" src="flow1.png" height="100">
             <img class="img2" src="fngfhb-removebg-preview.png" height="150">
-            <img class="img3" src="bord2.png" height="100">
+            <img class="img3" src="flower1.png" height="100">
         </div>
         <div class="main">
             <h1><i>Happy Teacher`s Day <br> dear Bota teacher!</i></h1>
@@ -26,4 +26,4 @@
         </div>
     </center>
 </body>
-</html>
+</html> 
