--- a/teacher.html
+++ b/teacher.html
@@ -12,6 +12,7 @@
             <img class="img1" src="flow1.png" height="100">
             <img class="img2" src="fngfhb-removebg-preview.png" height="150">
             <img class="img3" src="flower1.png" height="100">
+            <img class="img4" src="BotaT..jpg" height="100">
         </div>
         <div class="main">
             <h1><i>Happy Teacher`s Day <br> dear Bota teacher!</i></h1>
