--- a/index.html
+++ b/index.html
@@ -2,30 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1024">
-    <title>Teacher Day</title>
-    <link rel="stylesheet" href="teach.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wishes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <center>
-        <div>
-            <img class="img1" src="flow1.png" height="150">
-            <img class="img2" src="fngfhb-removebg-preview.png" height="190">
-            <img class="img3" src="flower1.png" height="180">
-            <img class="img4" src="BotaT..jpg" height="150">
-        </div>
-        <div class="main">
-            <h1><i>Happy Teacher`s Day <br> dear Bota teacher!</i></h1>
-            <br>
-            <p class="p1">Bota teacher, congratulations<br> to you on Teacher`s Day!<br>
-                I wish bright colors of life, kindness,<br>good luck and success, prosperity,<br>
-                purposefulness, good health, well-being,<br> respect and magnificence in everything!!
-                <br>You are the best, thank u for your<br> hard work and time spent on us.<br>
-                Love u to no end!
-            </p>
-            <br>
-            <p class="p2"><i>W love Ariana</i></p>
-        </div>
-    </center>
+    <div class="main">
+        <h1><i>Happy Birthday <br>to my dear mom!</i></h1>
+        <br>
+        <p class="p1">Любимая мамочка, позравляю тебя с твоим днем!<br>
+            Хочу пожелать тебе самое главное крепкого здоровья,<br> счастья, любви,
+             тепла, добра и долгих лет жизни!<br>Пусть в этот прекрасный день 
+             сбудутся все твои мечты и пожелания.<br>Знай ты самая лучшая мама на свете<br>
+            и я тебя очень сильно люблю!!
+        </p>
+
+        <p class="p2"><i>С любовью Арианочкаа!</i></p>
+    </div>  
+    <img class="img1" src="flowers2.png" height="170">
+        <img class="img2" src="cake2.png" height="180">
+        <img class="img3" src="poni.png" height="170">  
 </body>
 </html> 
